fix: 1528 gutter alignment (#1549)
* fix: grid alignment, general spacing and size

- fix mobile nav align and dark mode icon fill
- update card margin on mobile to still appear card like
- normalize width

* remove grid lines used for visual cue

* fix: background on section_5

--- a/packages/website/components/footer/footer.scss
+++ b/packages/website/components/footer/footer.scss
@@ -40,7 +40,7 @@ $footerLogoWidth: 2.25rem;
 .footer_contact,
 .footer_resources,
 .footer_get-started {
-  margin-left: 1.5rem;
+  margin-left: 2rem;
   @include small {
     margin-bottom: 3rem;
   }
