--- a/packages/website/components/navigation/navigation.scss
+++ b/packages/website/components/navigation/navigation.scss
@@ -305,29 +305,30 @@
   &.mobile-panel {
     z-index: 50;
   }
-  @include small {
-    padding: 0 1.5rem;
-  }
 }
 
 .nav-items-wrapper {
-  @include small {
+  @include medium {
     display: none;
   }
 }
 
 .nav-menu-toggle {
   display: none;
-  @include small {
+  @include medium {
     display: flex;
     .DocSearch {
       margin-right: 1rem;
+    }
+    button {
+      display: flex;
+      align-items: center;
     }
   }
   &.light {
     svg,
     path {
-      fill: white;
+      // fill: white;
       stroke: white;
       transition: 250ms ease;
     }
@@ -346,7 +347,7 @@
   position: absolute;
   top: 0;
 
-  @include small {
+  @include medium {
     padding: 0 3.5rem;
     left: -99999px;
     right: -99999px;
@@ -366,7 +367,7 @@
   }
 
   &.open {
-    @include small {
+    @include medium {
       visibility: visible;
     }
     transform: translateY(0%);
@@ -444,7 +445,7 @@
       margin: 0 auto;
       transform: rotate(-40deg) translateX(12rem);
       bottom: -30rem;
-      @include small {
+      @include medium {
         width: 1800px;
         bottom: -25rem;
       }
