--- a/packages/website/components/tokens/tokensManager/tokensManager.scss
+++ b/packages/website/components/tokens/tokensManager/tokensManager.scss
@@ -4,7 +4,7 @@
   position: relative;
   align-items: baseline;
   justify-content: flex-start;
-  padding: 1.875rem 0 1.875rem 1.875rem;
+  padding: 2rem;
   width: 100%;
 
   @include medium {
@@ -15,11 +15,7 @@
 
   > * {
     width: 100%;
-    padding-left: 1.40625rem;
 
-    @include medium {
-      padding-left: 0;
-    }
     &:not(.delete-modal),
     &:not(.tokens-manager-footer) {
       max-width: 64rem;
@@ -38,13 +34,11 @@
   display: flex;
   padding-bottom: 0.9375rem;
   align-items: center;
-  padding-right: 1.875rem;
+  justify-content: space-between;
   flex-wrap: wrap;
 
   @include medium {
     padding-bottom: 2rem;
-    padding-right: 0;
-    justify-content: space-between;
   }
 
   // Title
@@ -134,7 +128,6 @@
 .tokens-manager-footer {
   display: flex;
   justify-content: space-between;
-  padding-right: 5.125rem;
   flex-wrap: wrap;
   &:before {
     content: '';
