--- a/packages/website/styles/layouts/userRequestsModals.scss
+++ b/packages/website/styles/layouts/userRequestsModals.scss
@@ -19,14 +19,16 @@
   }
 
   label {
-    line-height: 1rem;
+    display: inline-block;
+    line-height: 1.4;
   }
 
   textarea {
     display: block;
     width: 100%;
     height: 150px;
-    line-height: 1rem;
+    line-height: 1.5;
+    padding: .5rem;
     resize: none;
   }
 
